--- a/src/templates/landing_2/reset-password.html
+++ b/src/templates/landing_2/reset-password.html
@@ -30,18 +30,24 @@
             <div class="g8PopupContent">
                 <h3>Olvidé mi contraseña</h3>
                 <div class="gParrafo">
-                    <p>Ingresa el email que tienes asociado a tu cuenta. Te enviaremos un correo de confirmación.</p>
+                    <p>A continuación ingrese su nueva contraseña.</p>
                 </div>
                 <div class="g8Form">
                     <form action="" method="POST">
                     {% csrf_token %}
                     <div class="g8GroupInput one">
                         <div class="g8Input">
-                            <span>Email</span>
-                            <input type="text" class="g8Box validate[required,custom[email]]" name="{{form.email.html_name}}">
+                            <span>Contraseña</span>
+                            <input type="password" id="password" class="g8Box validate[required]" name="{{form.new_password1.html_name}}">
                         </div>
-                        <button type="submit">Enviar</button>
                     </div>
+                    <div class="g8GroupInput one">
+                        <div class="g8Input">
+                                <span>Confirmar Contraseña</span>
+                                <input type="password" class="g8Box validate[required,equals[password]]"  name="{{form.new_password2.html_name}}">
+                        </div>
+                    </div>
+                    <button type="submit">Enviar</button>
                     </form>
                 <a href="{% url 'landing:home' %}" class="linkCancelar">Cancelar</a>
             </div>
