--- a/src/templates/landing_2/common/_header.html
+++ b/src/templates/landing_2/common/_header.html
@@ -114,7 +114,7 @@
     <div class="g8Bottom tac">
         {% comment %} <a href="" class="losePassword">Olvidé mi contraseña</a> {% endcomment %}
         <a href="{% url 'landing:recover_password' %}">Olvidé mi contraseña</a>
-        <h4>No tengo una cuenta <a href="#" id="openRegistrarme">Registrarme</a></h4>
+        <h4>No tengo una cuenta <a href="#" id="openRegistrarme">Regístrate</a></h4>
     </div>
 </div>
 
@@ -342,7 +342,7 @@
                         </div>
                     {% endif %}
                     <button class="g8SumitRegistro save-register">Enviar</button>
-                    <h4>Ya tengo una cuenta <a href="#" id="openIniciaSesion">Inicial sesión</a></h4>
+                    <h4>Ya tengo una cuenta <a href="#" id="openIniciaSesion">Inicia sesión</a></h4>
                 </div>
                 <p class="messageError message-warning"></p>
             </form>
