--- a/src/templates/landing_2/home.html
+++ b/src/templates/landing_2/home.html
@@ -54,7 +54,7 @@
             {% endif %}
             <h4>{{home_page.main_title}}</h4>
             {% if not logged_user %}
-            <a href="#" class="gButton" id="b1ButtonRegister">Registrate</a>
+            <a href="#" class="gButton" id="b1ButtonRegister">Regístrate</a>
             {% endif %}
             <div class="b1List">
                 <div class="b1Item">
