Fix video, buttons

--- a/src/templates/landing_2/common/_header.html
+++ b/src/templates/landing_2/common/_header.html
@@ -363,6 +363,6 @@
         <h3>Registro exitoso</h3>
         <div class="gParrafo message-waiting-confirmation">
         </div>
-        <a href="{% url 'landing:home' %}" class="gButton buttonClosePopup">Ok</a>
+        <a href="{% url 'landing:home' %}" class="gButton">Ok</a>
     </div>
 </div>
