--- a/src/templates/landing_3/home.html
+++ b/src/templates/landing_3/home.html
@@ -21,7 +21,7 @@
                 <div class="b1InfoTopLeft f aife jcfs fdc-480">
                     <img src="{{home_page.image_banner.url}}" alt="" width="650" class="imgLogo">
                     {% if not logged_user %}
-                    <a href="#" class="button" id="b1ButtonRegister">Registrate</a>
+                    <a href="#" class="button" id="b1ButtonRegister">{{header_section.register_title}}</a>
                     {% endif %}
                 </div>
                 <div class="b1InfoTopRight">
