Change text size

--- a/src/templates/landing_3/common/_header.html
+++ b/src/templates/landing_3/common/_header.html
@@ -34,7 +34,7 @@
             <div class="headerOptionsSessions">
                 <!-- OPCIÒN CUANDO NO ESTA LOGEADO -->
                 <div class="headerOptionLogout f aic jcfe">
-                    <a href="" class="headerButtonLogin login">{{header_section.login_title}}</a>
+                    <a href="" class="headerButtonLogin login" style="font-size: 16px;">{{header_section.login_title}}</a>
                     <a href="" class="headerButtonRegistrate">{{header_section.register_title}}</a>
                 </div>
                 <!-- OPCIÒN CUANDO ESTA LOGEADO -->
