--- a/src/templates/landing_3/home.html
+++ b/src/templates/landing_3/home.html
@@ -51,10 +51,11 @@
                     <div class="b2ItemRight f aifs jcsb fdc-480">
                         <div class="b2LeftInfo">
                             <h4>{{schedule.name}}</h4>
+                            <p>{{schedule.start_time}} a {{schedule.end_time}}</p>
                             <p>{{schedule.description}}</p>
                         </div>
                         <div class="b2RightInfo">
-                            <p class="hour">{{schedule.start_time}} a {{schedule.end_time}}</p>
+                            {% comment %} <p class="hour">{{schedule.start_time}} a {{schedule.end_time}}</p> {% endcomment %}
                             {% for exhibitor in schedule.get_exhibitors %}
                                 {% if exhibitor.flag_image %}
                                     <img src="{{exhibitor.flag_image.url}}" alt="">
@@ -89,7 +90,7 @@
 <section class="b3 mY scrollWrap" id="speakers">
     <div class="grilla">
         <div class="b3Top f aic jcsb scrollItem fdc-480 aifs-768">
-            <h2>{{home_page.exhibitors_section_name}}</h2>
+            <h2>{{home_page.exhibitors_section_name}}</h2><br>
             <div class="gParrafo">
                 <p>{{home_page.exhibitors_section_title}}</p>
             </div>
