--- a/src/templates/landing_3/common/_footer.html
+++ b/src/templates/landing_3/common/_footer.html
@@ -3,12 +3,12 @@
         <div class="fWrap  f aic jcc fdc-768">
             <div class="fMenu f aic jcc fItem">
                 {% if header_section.show_schedule_section %}
-                <a href="#acerca" class="headerAnclaBlock">
+                <a href="#agenda" class="headerAnclaBlock">
                     {{header_section.schecule_header_name}}
                 </a>
                 {% endif %}
                 {% if header_section.show_exhibitors_section %}
-                <a href="#speakers" class="headerAnclaBlock">
+                <a href="#expositor" class="headerAnclaBlock">
                     {{header_section.exhibitors_header_name}}
                 </a>
                 {% endif %}
