--- a/src/templates/landing_3/common/_header.html
+++ b/src/templates/landing_3/common/_header.html
@@ -17,10 +17,10 @@
             -->
             {% if header %}
                 {% if header_section.show_schedule_section %}
-                    <a href="#acerca" class="headerAnclaBlock">{{header_section.schecule_header_name}}<span class="lineActive" style="background:#2AD2C9;"></span></a>
+                    <a href="#agenda" class="headerAnclaBlock">{{header_section.schecule_header_name}}<span class="lineActive" style="background:#2AD2C9;"></span></a>
                 {% endif %}
                 {% if header_section.show_exhibitors_section %}
-                <a href="#speakers" class="headerAnclaBlock">{{header_section.exhibitors_header_name}} <span class="lineActive" style="background:#2AD2C9;"></span></a>
+                <a href="#expositor" class="headerAnclaBlock">{{header_section.exhibitors_header_name}} <span class="lineActive" style="background:#2AD2C9;"></span></a>
                 {% endif %}
                 {% if header_section.show_workshops_section %}
                 <a href="#talleres" class="headerAnclaBlock">{{header_section.workshops_header_name}} <span class="lineActive" style="background:#2AD2C9;"></span></a>
