Add new confimation logic

--- a/src/templates/landing_3/home.html
+++ b/src/templates/landing_3/home.html
@@ -241,7 +241,7 @@
                     <a href="#" class="b5ItemClick arrowClick">{{row.name}}</a>
                     <div class="b5Info">
                         <div class="gParrafo">
-                            <p>{{row.answer|safe}}</p>
+                            {{row.answer|safe}}
                         </div>
                     </div>
                 </div>
