--- a/src/templates/landing_3/common/_base.html
+++ b/src/templates/landing_3/common/_base.html
@@ -251,7 +251,6 @@
                             'nombres': register_data['names'],
                             'apellidos': register_data['last_name']
                          });
-                        console.log(window.dataLayer, 'DATALAYER')
                         $('.save-register').disabled = false;
                         console.log(data, 'DATA')
                         if(data.confirmed){
@@ -261,12 +260,10 @@
                                 window.location.href = data.redirect_url
                             }, 2000)
                         }else{
-                            var parrafo_register = $('.parrafo-register')
-                            parrafo_register.hide();
-                            var register_form = $('.register-form')
+                            var register_form = $('.formRegistro')
                             register_form.hide();
                             $('.message-waiting-confirmation').html(data.confirmed_message)
-                            $('.waiting-confirmation-form').show();
+                            $('.formRegistroExitoso').addClass('active');
                             setTimeout(()=>{
                                 window.location.href = data.redirect_url
                             }, 20000)
