FIX credential view

--- a/src/templates/landing_3/home.html
+++ b/src/templates/landing_3/home.html
@@ -74,7 +74,7 @@
                                 data-cargo="{{exhibitor.title}} - {{exhibitor.organization}}"
                                 data-text="<p>{{exhibitor.description}}</p>">
                                     <p class="name">{{exhibitor.name}}</p>
-                                    <p class="cargo">{{exhibitor.title}} | {{exhibitor.organization}}</p>
+                                    <p class="cargo">{{exhibitor.organization}}</p>
                                 </div>
                             {% endfor %}
                         </div>
