--- a/src/templates/landing_3/common/_header.html
+++ b/src/templates/landing_3/common/_header.html
@@ -345,6 +345,6 @@
         <h3>Registro exitoso</h3>
         <div class="gParrafo message-waiting-confirmation">
         </div>
-        <a href="{% url 'landing:home' %}" class="gButton">Ok</a>
+        <a href="{% url 'landing:generate_credential' %}" class="gButton">Ok</a>
     </div>
 </div>
