--- a/src/templates/landing_3/home.html
+++ b/src/templates/landing_3/home.html
@@ -179,7 +179,7 @@
     </div>
 </div>
 
-{% if header_section.show_workshops_section %}
+{% if header_section.show_workshops_section and company_user.in_person and company_user.confirmed %}
 <section class="b4 mY scrollWrap" id="talleres">
     <div class="grilla f aifs jcsb scrollItem fdc-768 ">
         <div class="b4Left">
